2005-03-15  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-03-15  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: recognize tun interfaces as ppp too

2005-03-15  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: leave only wireless-* and remove wireless_* (for
	handled wi-fi options, the rest will remain untouched)

2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.2.0

2005-03-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: don't activate the interface after having changed
	if it was left disabled

2005-03-05  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "vi" to ALL_LINGUAS.

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.92
	* general.pl.in: made bind_textdomain_codeset optional, big hack, but
	ATM it's better than requiring a package that distros don't ship at
	all...

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
	services-conf.in, shares-conf.in, time-conf.in, users-conf.in:
	Added support for Fedora Core 3, it's just like FC2

2005-02-28  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: add dhcpcd as an option to dhclient. Fixes #164993
	* process.pl.in (gst_process_kill_by_pidfile): add the possibility of
	specifying a full path, defaulting to /var/run

2005-02-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* share.pl.in: avoid print$ section as well in smb.conf, it has much
	more to do with printing than with file sharing

2005-02-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in: added "set_gateway" directive

2005-02-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: patch with lots of help and testing
	from Michael Vogt <mvogt@acm.org> to fix PPP calling in the network
	tool. this should fix #167342

2005-02-23  Carlos Garnacho Parro  <carlosg@gnome.org>
